Added iMX6 Quad COM Board. AR1021 TP driver

--- a/recipes-kernel/linux/fragment.cfg
+++ b/recipes-kernel/linux/fragment.cfg
@@ -446,3 +446,8 @@ CONFIG_SND_SOC_IMX_WM8731=y
 #
 CONFIG_CAN_VCAN=y
 CONFIG_CAN_DEBUG_DEVICES=y
+
+#
+# EA: Touch controller on Carrier Board
+#
+CONFIG_TOUCHSCREEN_AR1021_I2C=y
