Fixed build for Quad and SoloX. Cleanup of machine files.

--- a/conf/machine/imx6qea-com.conf
+++ b/conf/machine/imx6qea-com.conf
@@ -2,14 +2,14 @@
 #@NAME: Embedded Artists i.MX6 Quad COM Board
 #@SOC: i.MX6Q
 #@DESCRIPTION: Machine configuration for Embedded Artists i.MX6 Quad COM Board
-#@MAINTAINER: EA <imx6@EmbeddedArtists.com>
+#@MAINTAINER: EA <imx@EmbeddedArtists.com>
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
-SOC_FAMILY = "mx6:mx6q:mx6qea"
+SOC_FAMILY = "mx6:mx6q"
 
 KERNEL_DEVICETREE = "imx6qea-com-kit.dtb"
 
