--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -2,14 +2,14 @@
 #@NAME: Embedded Artists i.MX6 SoloX COM Board
 #@SOC: i.MX6SX
 #@DESCRIPTION: Machine configuration for Embedded Artists i.MX6 SoloX COM Board
-#@MAINTAINER: EA <imx6sx@EmbeddedArtists.com>
+#@MAINTAINER: EA <imx@EmbeddedArtists.com>
 
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
-SOC_FAMILY = "mx6:mx6sx:eamx6sx"
+SOC_FAMILY = "mx6:mx6sx"
 
 KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb"
 
@@ -24,7 +24,6 @@ UBOOT_CONFIG[qspi2] = "mx6sxsabresd_qspi2_config"
 UBOOT_CONFIG[m4fastup] = "mx6sxsabresd_m4fastup_config"
 UBOOT_CONFIG[mfgtool] = "mx6sxea-com_config"
 
-#UBOOT_MAKE_TARGET = "u-boot.imx"
 UBOOT_MAKE_TARGET = "all"
 UBOOT_SUFFIX = "img"
 
