--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -1,8 +1,8 @@
 #@TYPE: Machine
-#@NAME: Freescale i.MX6UL Evaluation Kit
+#@NAME: Embedded Artists i.MX6 UltraLite COM Board
 #@SOC: i.MX6UL
-#@DESCRIPTION: Machine configuration for Freescale i.MX6UL EVK
-#@MAINTAINER: Lauren Post <lauren.post@freescale.com>
+#@DESCRIPTION: Machine configuration for Embedded Artists i.MX6 UltraLite COM Board
+#@MAINTAINER: EA <imx@EmbeddedArtists.com>
 
 include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
@@ -35,7 +35,6 @@ KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6ulea-com_config,sdcard"
-#UBOOT_CONFIG[qspi1] = "mx6ul_14x14_evk_qspi1_config"
 UBOOT_CONFIG[mfgtool] = "mx6ulea-com_config"
 
 UBOOT_MAKE_TARGET = "all"
