IMX6SX: re-enabled QSPI support in u-boot. Enabled rpmsg pingpong module

--- a/recipes-kernel/linux/fragment.cfg
+++ b/recipes-kernel/linux/fragment.cfg
@@ -451,3 +451,13 @@ CONFIG_CAN_DEBUG_DEVICES=y
 # EA: Touch controller on Carrier Board
 #
 CONFIG_TOUCHSCREEN_AR1021_I2C=y
+
+#
+# EA: For USB Modem
+#
+CONFIG_USB_NET_RNDIS_HOST=m
+
+#
+# EA: Enable RPMsg Ping-pong demo
+#
+CONFIG_IMX_RPMSG_PINGPONG=m
