iMX7D: Prepare for iMX7D uCOM Board

--- a/recipes-kernel/linux/fragment.cfg
+++ b/recipes-kernel/linux/fragment.cfg
@@ -461,3 +461,15 @@ CONFIG_USB_NET_RNDIS_HOST=m
 # EA: Enable RPMsg Ping-pong demo
 #
 CONFIG_IMX_RPMSG_PINGPONG=m
+
+
+
+#
+# EA: BD7181x PMIC
+#
+CONFIG_GPIO_BD7181X=y
+CONFIG_BD7181X_POWER=y
+CONFIG_MFD_BD7181X=y
+CONFIG_REGULATOR_BD7181X=y
+CONFIG_RTC_DRV_BD7181X=y
+
