Added support for display and touch configuration in runtime

--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -31,7 +31,7 @@ MACHINE_SOCARCH_FILTER_mx6ul = "libfslcodec libfslparser gst-fsl-plugins"
 
 SOC_FAMILY = "mx6:mx6ul"
 
-KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb"
+KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb imx6ulea-com-kit-rf.dtb"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6ulea-com_config,sdcard"
