--- a/recipes-kernel/linux/fragment.cfg
+++ b/recipes-kernel/linux/fragment.cfg
@@ -451,6 +451,8 @@ CONFIG_CAN_DEBUG_DEVICES=y
 # EA: Touch controller on Carrier Board
 #
 CONFIG_TOUCHSCREEN_AR1021_I2C=y
+CONFIG_TOUCHSCREEN_ILIAIM=y
+CONFIG_TOUCHSCREEN_SITRONIX_I2C=y
 
 #
 # EA: For USB Modem
