--- a/recipes-kernel/linux/fragment.cfg
+++ b/recipes-kernel/linux/fragment.cfg
@@ -453,6 +453,7 @@ CONFIG_CAN_DEBUG_DEVICES=y
 CONFIG_TOUCHSCREEN_AR1021_I2C=y
 CONFIG_TOUCHSCREEN_ILIAIM=y
 CONFIG_TOUCHSCREEN_SITRONIX_I2C=y
+CONFIG_TOUCHSCREEN_EDT_FT5X06=y
 
 #
 # EA: For USB Modem
