Add support for Realtek RTL8188CUS WLAN chipset

--- a/recipes-kernel/linux/fragment.cfg
+++ b/recipes-kernel/linux/fragment.cfg
@@ -476,3 +476,12 @@ CONFIG_MFD_BD7181X=y
 CONFIG_REGULATOR_BD7181X=y
 CONFIG_RTC_DRV_BD7181X=y
 
+#
+# EA: Realtek RTL8188CUS 
+#
+CONFIG_RTL_CARDS=y
+CONFIG_RTLWIFI=y
+CONFIG_RTLWIFI_USB=y
+CONFIG_RTL8192C_COMMON=y
+CONFIG_RTL8192CU=y
+CONFIG_RTLWIFI_DEBUG=n
