Changed to IMX file instead of SPL+IMG for iMX7d u-boot

--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -39,6 +39,4 @@ UBOOT_CONFIG[sd] = "mx7dea-ucom_config,sdcard"
 UBOOT_CONFIG[mfgtool] = "mx7dea-ucom_config"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "img"
-
-SPL_BINARY = "SPL"
+UBOOT_SUFFIX = "imx"
