--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -39,6 +39,4 @@ UBOOT_CONFIG[sd] = "mx7dea-com_config,sdcard"
 UBOOT_CONFIG[mfgtool] = "mx7dea-com_config"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "img"
-
-SPL_BINARY = "SPL"
+UBOOT_SUFFIX = "imx"
