Added Cortex-M4 related dts for iMX7D. Update conf files to copy all dtb files

--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -11,7 +11,7 @@ SERIAL_CONSOLE = "115200 ttymxc0"
 
 SOC_FAMILY = "mx6:mx6sx"
 
-KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb"
+KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb imx6sxea-com-kit-lvds.dtb imx6sxea-com-kit-rgb.dtb"
 
 KERNEL_IMAGETYPE = "zImage"
 
