--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -30,7 +30,7 @@ MACHINE_EXTRA_RRECOMMENDS_append_mx7 = " ${@base_contains('DISTRO_FEATURES', 'al
 
 SOC_FAMILY = "mx7:mx7d"
 
-KERNEL_DEVICETREE = "imx7dea-com-kit.dtb"
+KERNEL_DEVICETREE = "imx7dea-com-kit.dtb imx7dea-com-kit-m4.dtb"
 
 UBOOT_ENTRYPOINT_mx7 = "0x80008000"
 
