--- a/recipes-kernel/linux/fragment.cfg
+++ b/recipes-kernel/linux/fragment.cfg
@@ -485,3 +485,26 @@ CONFIG_RTLWIFI_USB=y
 CONFIG_RTL8192C_COMMON=y
 CONFIG_RTL8192CU=y
 CONFIG_RTLWIFI_DEBUG=n
+
+#
+# 4.1.15
+#
+
+# CONFIG_PCI_IMX6_COMPLIANCE_TEST is not set
+# CONFIG_PCI_LAYERSCAPE is not set
+# CONFIG_PCIE_IPROC is not set
+# CONFIG_SATA_MV is not set
+# CONFIG_NET_VENDOR_AGERE is not set
+# CONFIG_TI_CPSW_ALE is not set
+# CONFIG_IWLWIFI_BCAST_FILTERING is not set
+# CONFIG_IWLWIFI_UAPSD is not set
+# CONFIG_RTL8723BE is not set
+# CONFIG_RTL8192EE is not set
+# CONFIG_RTL8821AE is not set  
+# CONFIG_SND_SE6X is not set
+# CONFIG_MMC_TOSHIBA_PCI is not set
+# CONFIG_HSU_DMA_PCI is not set
+# CONFIG_R8723AU is not set
+# CONFIG_R8723AU is not set
+# CONFIG_FB_SM750 is not set
+# CONFIG_THUNDERBOLT is not set
