Using own repository of Linux kernel

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,7 +7,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 
 BBFILE_COLLECTIONS += "ea"
 BBFILE_PATTERN_ea = "^${LAYERDIR}/"
-BBFILE_PRIORITY_ea = "10"
+BBFILE_PRIORITY_ea = "9"
 
-LAYERDEPENDS_ea = "fsl-arm"
+#LAYERDEPENDS_ea = "fsl-arm"
 
