--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -11,6 +11,9 @@ SERIAL_CONSOLE = "115200 ttymxc0"
 
 SOC_FAMILY = "mx6:mx6sx"
 
+PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
+
 KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb imx6sxea-com-kit-lvds.dtb imx6sxea-com-kit-rgb.dtb"
 
 KERNEL_IMAGETYPE = "zImage"
