--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -31,6 +31,9 @@ MACHINE_SOCARCH_FILTER_mx6ul = "libfslcodec libfslparser gst-fsl-plugins"
 
 SOC_FAMILY = "mx6:mx6ul"
 
+PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
+
 KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb imx6ulea-com-kit-rf.dtb"
 
 UBOOT_CONFIG ??= "sd"
