--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -25,6 +25,9 @@ PREFERRED_PROVIDER_virtual/libg2d_mx7 = ""
 
 SOC_FAMILY = "mx7:mx7d"
 
+PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel_mx7 = "linux-ea"
+
 KERNEL_DEVICETREE = "imx7dea-ucom-kit.dtb imx7dea-ucom-kit-m4.dtb imx7dea-ucom-kit-lvds.dtb"
 
 UBOOT_ENTRYPOINT_mx7 = "0x80008000"
