--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -11,6 +11,9 @@ SERIAL_CONSOLE = "115200 ttymxc0"
 
 SOC_FAMILY = "mx6:mx6dl"
 
+PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
+
 KERNEL_DEVICETREE = "imx6dlea-com-kit.dtb"
 
 KERNEL_IMAGETYPE = "zImage"
