iMX6UL: Doesn't build when SOC contains mx6

--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -29,7 +29,7 @@ PREFERRED_PROVIDER_virtual/libg2d_mx6ul = ""
 MACHINE_SOCARCH_FILTER_mx6ul = "libfslcodec libfslparser gst-fsl-plugins"
 
 
-SOC_FAMILY = "mx6:mx6ul"
+SOC_FAMILY = "mx6ul"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
