Using EA repository for uboot. Mfgtool now also using EA repositories for kernel and uboot

--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -28,7 +28,16 @@ SOC_FAMILY = "mx7:mx7d"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel_mx7 = "linux-ea"
 
+PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+
 KERNEL_DEVICETREE = "imx7dea-com-kit.dtb imx7dea-com-kit-m4.dtb"
+
+PREFERRED_PROVIDER_u-boot = "u-boot-ea"
+PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader_mx7 = "u-boot-ea"
+
+PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_ENTRYPOINT_mx7 = "0x80008000"
 
