--- a/conf/machine/imx6qea-com.conf
+++ b/conf/machine/imx6qea-com.conf
@@ -14,9 +14,18 @@ SOC_FAMILY = "mx6:mx6q"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
 
+PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+
 KERNEL_DEVICETREE = "imx6qea-com-kit.dtb"
 
 KERNEL_IMAGETYPE = "zImage"
+
+PREFERRED_PROVIDER_u-boot = "u-boot-ea"
+PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader_mx6 = "u-boot-ea"
+
+PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_ENTRYPOINT = "0x80008000"
 
