--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -26,6 +26,7 @@ PREFERRED_PROVIDER_virtual/libgles2_mx6ul = "mesa"
 PREFERRED_PROVIDER_virtual/libgl_mx6ul = "mesa"
 PREFERRED_PROVIDER_virtual/libg2d_mx6ul = ""
 
+
 MACHINE_SOCARCH_FILTER_mx6ul = "libfslcodec libfslparser gst-fsl-plugins"
 
 
@@ -34,7 +35,17 @@ SOC_FAMILY = "mx6ul"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
 
+PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+
 KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb imx6ulea-com-kit-rf.dtb"
+
+
+PREFERRED_PROVIDER_u-boot = "u-boot-ea"
+PREFERRED_PROVIDER_u-boot_mx6ul = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader_mx6ul = "u-boot-ea"
+
+PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6ulea-com_config,sdcard"
