Using new config for mfgtool

--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -32,9 +32,9 @@ UBOOT_ENTRYPOINT = "0x80008000"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6dlea-com_config"
-UBOOT_CONFIG[mfgtool] = "mx6dlea-com_config"
+UBOOT_CONFIG[mfgtool] = "mx6dlea-com-mfg_config"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "img"
 
-SPL_BINARY = "SPL"
+UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
+SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
