--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -34,9 +34,9 @@ UBOOT_CONFIG[sd] = "mx6sxea-com_config"
 UBOOT_CONFIG[emmc] = "mx6sxsabresd_emmc_config,sdcard"
 UBOOT_CONFIG[qspi2] = "mx6sxsabresd_qspi2_config"
 UBOOT_CONFIG[m4fastup] = "mx6sxsabresd_m4fastup_config"
-UBOOT_CONFIG[mfgtool] = "mx6sxea-com_config"
+UBOOT_CONFIG[mfgtool] = "mx6sxea-com-mfg_config"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "img"
 
-SPL_BINARY = "SPL"
+UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
+SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
