--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -49,9 +49,9 @@ PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6ulea-com_config,sdcard"
-UBOOT_CONFIG[mfgtool] = "mx6ulea-com_config"
+UBOOT_CONFIG[mfgtool] = "mx6ulea-com-mfg_config"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "img"
 
-SPL_BINARY = "SPL"
+UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
+SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
