--- a/conf/machine/imx6qea-com.conf
+++ b/conf/machine/imx6qea-com.conf
@@ -31,9 +31,9 @@ UBOOT_ENTRYPOINT = "0x80008000"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6qea-com_config"
-UBOOT_CONFIG[mfgtool] = "mx6qea-com_config"
+UBOOT_CONFIG[mfgtool] = "mx6qea-com-mfg_config"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "img"
 
-SPL_BINARY = "SPL"
+UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
+SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
