L4.9.11 Yocto build corrections

--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -7,28 +7,21 @@
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 
-SERIAL_CONSOLE = "115200 ttymxc0"
+MACHINEOVERRIDES =. "mx6:mx6dl:"
 
-SOC_FAMILY = "mx6:mx6dl"
-
+PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
-PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
 KERNEL_DEVICETREE = "imx6dlea-com-kit.dtb"
 
-KERNEL_IMAGETYPE = "zImage"
-
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader_mx6 = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
-
-UBOOT_ENTRYPOINT = "0x80008000"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6dlea-com_config"
