--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -9,31 +9,23 @@ require conf/machine/include/tune-cortexa9.inc
 
 SERIAL_CONSOLE = "115200 ttymxc0"
 
-SOC_FAMILY = "mx6:mx6sx"
+MACHINEOVERRIDES =. "mx6:mx6sx:"
 
+PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
-PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
 KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb imx6sxea-com-kit-lvds.dtb imx6sxea-com-kit-rgb.dtb"
 
-KERNEL_IMAGETYPE = "zImage"
-
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader_mx6 = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
-UBOOT_ENTRYPOINT = "0x80008000"
-
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6sxea-com_config"
-UBOOT_CONFIG[emmc] = "mx6sxsabresd_emmc_config,sdcard"
-UBOOT_CONFIG[qspi2] = "mx6sxsabresd_qspi2_config"
-UBOOT_CONFIG[m4fastup] = "mx6sxsabresd_m4fastup_config"
 UBOOT_CONFIG[mfgtool] = "mx6sxea-com-mfg_config"
 
 UBOOT_MAKE_TARGET = "all"
