--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -7,33 +7,12 @@
 include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 
-DEFAULTTUNE_mx6ul ?= "cortexa7hf-neon"
-
-SERIAL_CONSOLE = "115200 ttymxc0"
-
 MACHINE_FEATURES += " pci wifi bluetooth"
 
-MACHINE_FIRMWARE += "linux-firmware-ath6k"
+MACHINEOVERRIDES =. "mx6:mx6ul:"
 
-MACHINE_SOCARCH_SUFFIX_mx6ul = "-mx6ul"
-
-XSERVER_DRIVER_mx6ul = "xf86-video-fbdev"
-
-# mx6 GPU libraries
-PREFERRED_PROVIDER_virtual/egl_mx6ul = "mesa"
-PREFERRED_PROVIDER_virtual/libgles1_mx6ul = "mesa"
-PREFERRED_PROVIDER_virtual/libgles2_mx6ul = "mesa"
-PREFERRED_PROVIDER_virtual/libgl_mx6ul = "mesa"
-PREFERRED_PROVIDER_virtual/libg2d_mx6ul = ""
-
-
-MACHINE_SOCARCH_FILTER_mx6ul = "libfslcodec libfslparser gst-fsl-plugins"
-
-
-SOC_FAMILY = "mx6ul"
-
+PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
-PREFERRED_PROVIDER_virtual/kernel_mx6 = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
@@ -42,8 +21,7 @@ KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb imx6ulea-com-kit-rf.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6ul = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader_mx6ul = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
