--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -7,26 +7,12 @@
 include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 
-DEFAULTTUNE_mx7 ?= "cortexa7hf-neon"
-
-SERIAL_CONSOLE = "115200 ttymxc0"
-
-MACHINE_FIRMWARE_append_mx7 = " linux-firmware-ath6k firmware-imx-epdc"
-
 MACHINE_FEATURES += " pci wifi bluetooth"
 
-MACHINE_SOCARCH_SUFFIX_mx7 = "-mx7"
+MACHINEOVERRIDES =. "mx7:mx7d:"
 
-PREFERRED_PROVIDER_virtual/egl_mx7 = "mesa"
-PREFERRED_PROVIDER_virtual/libgles1_mx7 = "mesa"
-PREFERRED_PROVIDER_virtual/libgles2_mx7 = "mesa"
-PREFERRED_PROVIDER_virtual/libgl_mx7 = "mesa"
-PREFERRED_PROVIDER_virtual/libg2d_mx7 = ""
-
-SOC_FAMILY = "mx7:mx7d"
-
+PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
-PREFERRED_PROVIDER_virtual/kernel_mx7 = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
@@ -34,12 +20,9 @@ KERNEL_DEVICETREE = "imx7dea-ucom-kit.dtb imx7dea-ucom-kit-m4.dtb imx7dea-ucom-k
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader_mx7 = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
-
-UBOOT_ENTRYPOINT_mx7 = "0x80008000"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx7dea-ucom_config,sdcard"
