Updated to latest linux-ea (camera support)

--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -16,7 +16,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
-KERNEL_DEVICETREE = "imx7dea-com-kit.dtb imx7dea-com-kit-m4.dtb"
+KERNEL_DEVICETREE = "imx7dea-com-kit.dtb imx7dea-com-kit-m4.dtb imx7dea-com-kit-ov5640.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
