Added dtb files supporting parallell camera interface

--- a/conf/machine/imx6qea-com.conf
+++ b/conf/machine/imx6qea-com.conf
@@ -14,7 +14,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
-KERNEL_DEVICETREE = "imx6qea-com-kit.dtb imx6qea-com-kit-ov5640.dtb"
+KERNEL_DEVICETREE = "imx6qea-com-kit.dtb imx6qea-com-kit-ov5640.dtb imx6qea-com-kit-ov5640-pl.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
