--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -16,7 +16,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
-KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb imx6ulea-com-kit-rf.dtb"
+KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb imx6ulea-com-kit-rf.dtb imx6ulea-com-kit-ov5640-pl.dtb"
 
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
