Added sd/pcie dts for 6UL, 7D uCOM, 6DL. Updated uboot and linux

--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -16,7 +16,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
-KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb imx6sxea-com-kit-lvds.dtb imx6sxea-com-kit-rgb.dtb imx6sxea-com-kit-ov5640-pl.dtb"
+KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb imx6sxea-com-kit-lvds.dtb imx6sxea-com-kit-rgb.dtb imx6sxea-com-kit-ov5640-pl.dtb imx6sxea-com-kit-pcie.dtb imx6sxea-com-kit-sd.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
