--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -14,7 +14,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
-KERNEL_DEVICETREE = "imx6dlea-com-kit.dtb imx6dlea-com-kit-ov5640.dtb imx6dlea-com-kit-ov5640-pl.dtb imx6dlea-com-kit-pcie.dtb imx6dlea-com-kit-sd.dtb"
+KERNEL_DEVICETREE = "imx6dlea-com-kit.dtb imx6dlea-com-kit-ov5640.dtb imx6dlea-com-kit-ov5640-pl.dtb imx6dlea-com-kit-pcie.dtb imx6dlea-com-kit-pcie-m2.dtb imx6dlea-com-kit-sd.dtb"
 
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
