--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -16,7 +16,16 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
-KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb imx6sxea-com-kit-m4.dtb imx6sxea-com-kit-lvds.dtb imx6sxea-com-kit-rgb.dtb imx6sxea-com-kit-ov5640-pl.dtb"
+KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb \
+  imx6sxea-com-kit-m4.dtb \
+  imx6sxea-com-kit-lvds.dtb \
+  imx6sxea-com-kit-rgb.dtb \
+  imx6sxea-com-kit-ov5640-pl.dtb \
+  imx6sxea-com-kit_v2.dtb \
+  imx6sxea-com-kit_v2-m4.dtb \
+  imx6sxea-com-kit_v2-ov5640-pl.dtb \
+  imx6sxea-com-kit_v2-pcie.dtb \
+"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
