--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -16,7 +16,15 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
-KERNEL_DEVICETREE = "imx7dea-ucom-kit.dtb imx7dea-ucom-kit-m4.dtb imx7dea-ucom-kit-lvds.dtb imx7dea-ucom-kit-ov5640.dtb"
+KERNEL_DEVICETREE = "imx7dea-ucom-kit.dtb \
+  imx7dea-ucom-kit-m4.dtb \
+  imx7dea-ucom-kit-lvds.dtb \
+  imx7dea-ucom-kit-ov5640.dtb \
+  imx7dea-ucom-kit_v2.dtb \
+  imx7dea-ucom-kit_v2-m4.dtb \
+  imx7dea-ucom-kit_v2-ov5640.dtb \
+  imx7dea-ucom-kit_v2-pcie.dtb \
+"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
