--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -32,10 +32,12 @@ PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "mx7dea-com_config,sdcard"
+UBOOT_CONFIG[sd] = "mx7dea-com_config"
 UBOOT_CONFIG[mfgtool] = "mx7dea-com_config"
 
 XSERVER += "mesa-driver-swrast"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "imx"
+
+UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
+SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
