Updated to latest u-boot

--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -33,8 +33,10 @@ PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_CONFIG ??= "sd"
-UBOOT_CONFIG[sd] = "mx7dea-ucom_config,sdcard"
+UBOOT_CONFIG[sd] = "mx7dea-ucom_config"
 UBOOT_CONFIG[mfgtool] = "mx7dea-ucom_config"
 
 UBOOT_MAKE_TARGET = "all"
-UBOOT_SUFFIX = "imx"
+UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
+SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
+
