Corrected dtb files for i.MX8M Mini uCOM

--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -17,8 +17,11 @@ PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 MACHINE_FEATURES += " pci"
 
-KERNEL_DEVICETREE = "freescale/fsl-imx8mm-ea-com-kit_v2.dtb freescale/fsl-imx8mm-ea-com-kit_v2-m4.dtb "
-KERNEL_DEVICETREE += "freescale/fsl-imx8mm-ea-com-kit_v2-pcie.dtb "
+KERNEL_DEVICETREE = "freescale/fsl-imx8mm-ea-ucom-kit_v2.dtb \
+                     freescale/fsl-imx8mm-ea-ucom-kit_v2-1mw.dtb \
+                     freescale/fsl-imx8mm-ea-ucom-kit_v2-m4.dtb \
+                     freescale/fsl-imx8mm-ea-ucom-kit_v2-pcie.dtb \
+"
 
 IMAGE_BOOTFILES_DEPENDS += "imx-m4-demos:do_deploy"
 IMAGE_BOOTFILES += "imx8mm_m4_TCM_hello_world.bin \
