Updated linux/u-boot for i.MX7ULP uCOM

--- a/conf/machine/imx7ulpea-ucom.conf
+++ b/conf/machine/imx7ulpea-ucom.conf
@@ -17,6 +17,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
 
 KERNEL_DEVICETREE = "imx7ulpea-ucom-kit_v2.dtb \
+                     imx7ulpea-ucom-kit_v2-1lv.dtb \
 "
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
