New recipe ea-image-ptp for production tests

--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -26,6 +26,7 @@ KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb \
   imx6sxea-com-kit_v2-ov5640-pl.dtb \
   imx6sxea-com-kit_v2-pcie.dtb \
 "
+KERNEL_DEVICETREE_ea-ptp = "imx6sxea-com-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
