--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -22,7 +22,7 @@ KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb \
   imx6ulea-com-kit_v2.dtb \
   imx6ulea-com-kit_v2-ov5640-pl.dtb \
 "
-
+KERNEL_DEVICETREE_ea-ptp = "imx6ulea-com-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6ul = "u-boot-ea"
