--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -24,6 +24,7 @@ KERNEL_DEVICETREE = "imx7dea-com-kit.dtb \
   imx7dea-com-kit_v2-ov5640.dtb \
   imx7dea-com-kit_v2-pcie.dtb \
 "
+KERNEL_DEVICETREE_ea-ptp = "imx7dea-com-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
