--- a/conf/machine/imx8mqea-com.conf
+++ b/conf/machine/imx8mqea-com.conf
@@ -19,6 +19,7 @@ MACHINE_FEATURES += " pci"
 
 KERNEL_DEVICETREE = "freescale/fsl-imx8mq-ea-com-kit_v2.dtb freescale/fsl-imx8mq-ea-com-kit_v2-m4.dtb "
 KERNEL_DEVICETREE += "freescale/fsl-imx8mq-ea-com-kit_v2-pcie.dtb freescale/fsl-imx8mq-ea-com-kit_v2-ov5640.dtb "
+KERNEL_DEVICETREE_ea-ptp = "freescale/fsl-imx8mq-ea-com-ptp.dtb"
 
 IMAGE_BOOTFILES_DEPENDS += "imx-m4-demos:do_deploy"
 IMAGE_BOOTFILES += "imx8mq_m4_TCM_hello_world.bin imx8mq_m4_TCM_rpmsg_lite_pingpong_rtos_linux_remote.bin imx8mq_m4_TCM_rpmsg_lite_str_echo_rtos.bin"
