--- a/conf/machine/imx6qea-com.conf
+++ b/conf/machine/imx6qea-com.conf
@@ -22,7 +22,7 @@ KERNEL_DEVICETREE = "imx6qea-com-kit.dtb \
   imx6qea-com-kit_v2-ov5640-pl.dtb \
   imx6qea-com-kit_v2-pcie.dtb \
 "
-
+KERNEL_DEVICETREE_ea-ptp = "imx6qea-com-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
