--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -25,6 +25,7 @@ KERNEL_DEVICETREE = "imx7dea-ucom-kit.dtb \
   imx7dea-ucom-kit_v2-ov5640.dtb \
   imx7dea-ucom-kit_v2-pcie.dtb \
 "
+KERNEL_DEVICETREE_ea-ptp = "imx7dea-ucom-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
