--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -22,6 +22,7 @@ KERNEL_DEVICETREE = "freescale/fsl-imx8mm-ea-ucom-kit_v2.dtb \
                      freescale/fsl-imx8mm-ea-ucom-kit_v2-m4.dtb \
                      freescale/fsl-imx8mm-ea-ucom-kit_v2-pcie.dtb \
 "
+KERNEL_DEVICETREE_ea-ptp = "freescale/fsl-imx8mm-ea-ucom-ptp.dtb"
 
 IMAGE_BOOTFILES_DEPENDS += "imx-m4-demos:do_deploy"
 IMAGE_BOOTFILES += "imx8mm_m4_TCM_hello_world.bin \
