Corrected typo in PREFERRED_PROVIDER

--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -14,7 +14,7 @@ MACHINEOVERRIDES =. "mx6:mx6ul:"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
-PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
 KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb \
   imx6ulea-com-kit-rf.dtb \
