--- a/conf/machine/imx7ulpea-ucom.conf
+++ b/conf/machine/imx7ulpea-ucom.conf
@@ -14,7 +14,7 @@ MACHINEOVERRIDES =. "mx7:mx7ulp:"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
-PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
 KERNEL_DEVICETREE = "imx7ulpea-ucom-kit_v2.dtb \
                      imx7ulpea-ucom-kit_v2-1lv.dtb \
