--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -12,7 +12,7 @@ MACHINEOVERRIDES =. "mx6:mx6dl:"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
-PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
 KERNEL_DEVICETREE = "imx6dlea-com-kit.dtb \
   imx6dlea-com-kit-ov5640.dtb \
