--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -14,7 +14,7 @@ MACHINEOVERRIDES =. "mx6:mx6sx:"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
-PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
 KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb \
   imx6sxea-com-kit-m4.dtb \
