--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -14,7 +14,7 @@ MACHINEOVERRIDES =. "mx7:mx7d:"
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
-PREFERRED_PROVIDER_linux-mfgtool = "mfgtool-linux-ea"
+PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
 KERNEL_DEVICETREE = "imx7dea-com-kit.dtb \
   imx7dea-com-kit-m4.dtb \
