--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -25,8 +25,8 @@ KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb \
   imx6sxea-com-kit_v2-m4.dtb \
   imx6sxea-com-kit_v2-ov5640-pl.dtb \
   imx6sxea-com-kit_v2-pcie.dtb \
+  imx6sxea-com-ptp.dtb \
 "
-KERNEL_DEVICETREE_ea-ptp = "imx6sxea-com-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
@@ -36,9 +36,8 @@ PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6sxea-com_config"
-UBOOT_CONFIG[mfgtool] = "mx6sxea-com-mfg_config"
+UBOOT_CONFIG[mfgtool] = "mx6sxea-com-ptp_config"
 
-UBOOT_MAKE_TARGET = "all"
-
+UBOOT_MAKE_TARGET = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "u-boot.imx", "all",d)}"
 UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
 SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
