--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -23,8 +23,8 @@ KERNEL_DEVICETREE = "imx7dea-com-kit.dtb \
   imx7dea-com-kit_v2-m4.dtb \
   imx7dea-com-kit_v2-ov5640.dtb \
   imx7dea-com-kit_v2-pcie.dtb \
+  imx7dea-com-ptp.dtb \
 "
-KERNEL_DEVICETREE_ea-ptp = "imx7dea-com-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
@@ -38,7 +38,6 @@ UBOOT_CONFIG[mfgtool] = "mx7dea-com_config"
 
 XSERVER += "mesa-driver-swrast"
 
-UBOOT_MAKE_TARGET = "all"
-
+UBOOT_MAKE_TARGET = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "u-boot.imx", "all",d)}"
 UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
 SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
