--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -24,8 +24,8 @@ KERNEL_DEVICETREE = "imx7dea-ucom-kit.dtb \
   imx7dea-ucom-kit_v2-m4.dtb \
   imx7dea-ucom-kit_v2-ov5640.dtb \
   imx7dea-ucom-kit_v2-pcie.dtb \
+  imx7dea-ucom-ptp.dtb \
 "
-KERNEL_DEVICETREE_ea-ptp = "imx7dea-ucom-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
@@ -35,9 +35,9 @@ PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx7dea-ucom_config"
-UBOOT_CONFIG[mfgtool] = "mx7dea-ucom_config"
+UBOOT_CONFIG[mfgtool] = "mx7dea-ucom-ptp_config"
 
-UBOOT_MAKE_TARGET = "all"
+UBOOT_MAKE_TARGET = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "u-boot.imx", "all",d)}"
 UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
 SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
 
