--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -21,8 +21,8 @@ KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb \
   imx6ulea-com-kit-ov5640-pl.dtb \
   imx6ulea-com-kit_v2.dtb \
   imx6ulea-com-kit_v2-ov5640-pl.dtb \
+  imx6ulea-com-ptp.dtb \
 "
-KERNEL_DEVICETREE_ea-ptp = "imx6ulea-com-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx6ul = "u-boot-ea"
@@ -32,9 +32,8 @@ PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6ulea-com_config,sdcard"
-UBOOT_CONFIG[mfgtool] = "mx6ulea-com-mfg_config"
+UBOOT_CONFIG[mfgtool] = "mx6ulea-com_config"
 
-UBOOT_MAKE_TARGET = "all"
-
+UBOOT_MAKE_TARGET = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "u-boot.imx", "all",d)}"
 UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
 SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
