--- a/conf/machine/imx7ulpea-ucom.conf
+++ b/conf/machine/imx7ulpea-ucom.conf
@@ -18,8 +18,9 @@ PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
 KERNEL_DEVICETREE = "imx7ulpea-ucom-kit_v2.dtb \
                      imx7ulpea-ucom-kit_v2-1lv.dtb \
+                     imx7ulpea-ucom-ptp.dtb \
+                     imx7ulpea-ucom-ptp-1lv.dtb \
 "
-KERNEL_DEVICETREE_ea-ptp = "imx7ulpea-ucom-ptp.dtb"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot_mx7 = "u-boot-ea"
