iMX8MN: Added dts file that sets usb interface as host

--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -20,6 +20,7 @@ MACHINE_FEATURES += " pci"
 KERNEL_DEVICETREE = "freescale/fsl-imx8mn-ea-ucom-kit_v2.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-1mw.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-m4.dtb \
+                     freescale/fsl-imx8mn-ea-ucom-kit_v2-usb-host.dtb \
 "
 
 IMAGE_BOOTFILES_DEPENDS += "imx-m7-demos:do_deploy"
