--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -21,6 +21,7 @@ KERNEL_DEVICETREE = "freescale/fsl-imx8mn-ea-ucom-kit_v2.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-1mw.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-m4.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-usb-host.dtb \
+                     freescale/fsl-imx8mn-ea-ucom-kit_v2-ov5640.dtb \
 "
 
 IMAGE_BOOTFILES_DEPENDS += "imx-m7-demos:do_deploy"
