--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -45,7 +45,7 @@ UBOOT_DTB_NAME = "fsl-imx8mn-ea-ucom-kit_v2.dtb"
 IMXBOOT_TARGETS = "flash_ddr4_evk"
 
 # Set Serial console
-SERIAL_CONSOLE = "115200;ttymxc1"
+SERIAL_CONSOLES = "115200;ttymxc1"
 
 IMAGE_BOOTLOADER = "imx-boot"
 
