Cleanup of meta-ea.  - Removed deprecated SERIAL_CONSOLE property in machine configurations  - Added u-boot-ea-fw-utils to manage u-boot environment from Linux command line  - Updated so that fsl-image-mfgtool-initramfs can be built for all boards  - Added u-boot-script-ea to compile bootloader script  - Removed unreferenced patches

--- a/conf/machine/imx6qea-com.conf
+++ b/conf/machine/imx6qea-com.conf
@@ -7,6 +7,8 @@
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 
+SERIAL_CONSOLES = "115200;ttymxc3"
+
 MACHINEOVERRIDES =. "mx6:mx6q:"
 
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
@@ -29,7 +31,7 @@ PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
 PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
-
+PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6qea-com_config"
