--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -7,7 +7,7 @@
 require conf/machine/include/imx-base.inc
 require conf/machine/include/tune-cortexa9.inc
 
-SERIAL_CONSOLE = "115200 ttymxc0"
+SERIAL_CONSOLES = "115200;ttymxc0"
 
 MACHINEOVERRIDES =. "mx6:mx6sx:"
 
@@ -33,6 +33,7 @@ PREFERRED_PROVIDER_u-boot_mx6 = "u-boot-ea"
 PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
+PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6sxea-com_config"
