--- a/conf/machine/imx8mqea-com.conf
+++ b/conf/machine/imx8mqea-com.conf
@@ -14,6 +14,8 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
+PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
+PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
 MACHINE_FEATURES += " pci"
 
@@ -21,6 +23,7 @@ KERNEL_DEVICETREE = "freescale/fsl-imx8mq-ea-com-kit_v2.dtb \
                      freescale/fsl-imx8mq-ea-com-kit_v2-m4.dtb \
                      freescale/fsl-imx8mq-ea-com-kit_v2-pcie.dtb \
                      freescale/fsl-imx8mq-ea-com-kit_v2-ov5640.dtb \
+                     freescale/fsl-imx8mq-ea-com-kit_v2-mfg.dtb \
                      freescale/fsl-imx8mq-ea-com-ptp.dtb \
 "
 
@@ -41,7 +44,7 @@ UBOOT_DTB_NAME = "fsl-imx8mq-ea-com-kit_v2.dtb"
 IMXBOOT_TARGETS = "flash_evk flash_evk_no_hdmi flash_dp_evk"
 
 # Set Serial console
-SERIAL_CONSOLE = "115200 ttymxc0"
+SERIAL_CONSOLES = "115200;ttymxc0"
 
 IMAGE_BOOTLOADER = "imx-boot"
 
