--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -7,6 +7,8 @@
 include conf/machine/include/imx-base.inc
 include conf/machine/include/tune-cortexa7.inc
 
+SERIAL_CONSOLES = "115200;ttymxc0"
+
 MACHINE_FEATURES += " pci wifi bluetooth"
 
 MACHINEOVERRIDES =. "mx6:mx6ul:"
@@ -29,6 +31,7 @@ PREFERRED_PROVIDER_u-boot_mx6ul = "u-boot-ea"
 PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
+PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx6ulea-com_config,sdcard"
