--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -14,6 +14,8 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
+PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
+PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
 MACHINE_FEATURES += " pci"
 
@@ -45,7 +47,7 @@ UBOOT_DTB_NAME = "fsl-imx8mm-ea-ucom-kit_v2.dtb"
 IMXBOOT_TARGETS = "flash_evk"
 
 # Set Serial console
-SERIAL_CONSOLE = "115200 ttymxc1"
+SERIAL_CONSOLES = "115200;ttymxc1"
 
 IMAGE_BOOTLOADER = "imx-boot"
 
