--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -14,6 +14,8 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
 PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
+PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
+PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
 MACHINE_FEATURES += " pci"
 
