Updated to latest linux-ea and uboot-ea. Test related changes for iMX8M Nano

--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -24,6 +24,8 @@ KERNEL_DEVICETREE = "freescale/fsl-imx8mn-ea-ucom-kit_v2.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-m4.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-usb-host.dtb \
                      freescale/fsl-imx8mn-ea-ucom-kit_v2-ov5640.dtb \
+                     freescale/fsl-imx8mn-ea-ucom-ptp.dtb \
+                     freescale/fsl-imx8mn-ea-ucom-ptp-1mw.dtb \
 "
 
 IMAGE_BOOTFILES_DEPENDS += "imx-m7-demos:do_deploy"
@@ -35,6 +37,7 @@ IMAGE_BOOTFILES += "imx8mn_m7_TCM_hello_world.bin \
 
 UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx8mnea-ucom_config,sdcard"
+UBOOT_CONFIG[mfgtool] = "mx8mnea-ucom-ptp_config"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
 # Set DDR FIRMWARE
