First commit on 5.4.24

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,7 +8,7 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "ea"
 BBFILE_PATTERN_ea = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ea = "9"
-LAYERSERIES_COMPAT_ea = "sumo thud"
+LAYERSERIES_COMPAT_ea = "zeus"
 
 #LAYERDEPENDS_ea = "fsl-arm"
 
