--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -44,3 +44,15 @@ XSERVER += "mesa-driver-swrast"
 UBOOT_MAKE_TARGET = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "u-boot.imx", "all",d)}"
 UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
 SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
+
+#
+# Got the following build error: "make_dtb_boot_files No such file or directory"
+# Seemed to be related to imx-base.inc where make_dtb_boot_files is called from
+# IMAGE_BOOT_FILES. Setting IMAGE_BOOT_FILES like below solved the problem, but
+# it needs further investigation.
+#
+IMAGE_BOOT_FILES = " \
+    ${KERNEL_IMAGETYPE} \
+    ${KERNEL_DEVICETREE} \
+"
+
