--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -4,14 +4,15 @@
 #@DESCRIPTION: Machine configuration for Embedded Artists i.MX7 Dual uCOM Board
 #@MAINTAINER: EA <imx@EmbeddedArtists.com>
 
-include conf/machine/include/imx-base.inc
-include conf/machine/include/tune-cortexa7.inc
+MACHINEOVERRIDES =. "mx7:mx7d:"
+
+require conf/machine/include/imx-base.inc
+require conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES = "115200;ttymxc0"
 
 MACHINE_FEATURES += " pci wifi bluetooth"
 
-MACHINEOVERRIDES =. "mx7:mx7d:"
 
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
@@ -44,3 +45,13 @@ UBOOT_MAKE_TARGET = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "u-boot.imx
 UBOOT_SUFFIX = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "imx", "img",d)}"
 SPL_BINARY = "${@bb.utils.contains("UBOOT_CONFIG", "mfgtool", "", "SPL",d)}"
 
+#
+# Got the following build error: "make_dtb_boot_files No such file or directory"
+# Seemed to be related to imx-base.inc where make_dtb_boot_files is called from
+# IMAGE_BOOT_FILES. Setting IMAGE_BOOT_FILES like below solved the problem, but
+# it needs further investigation.
+#
+IMAGE_BOOT_FILES = " \
+    ${KERNEL_IMAGETYPE} \
+    ${KERNEL_DEVICETREE} \
+"
