--- a/conf/machine/imx7ulpea-ucom.conf
+++ b/conf/machine/imx7ulpea-ucom.conf
@@ -4,14 +4,15 @@
 #@DESCRIPTION: Machine configuration for Embedded Artists i.MX7 ULP uCOM Board
 #@MAINTAINER: EA <imx@EmbeddedArtists.com>
 
-include conf/machine/include/imx-base.inc
-include conf/machine/include/tune-cortexa7.inc
+MACHINEOVERRIDES =. "mx7:mx7ulp:"
+
+require conf/machine/include/imx-base.inc
+require conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES = "115200;ttyLP0"
 
 MACHINE_FEATURES += " pci wifi bluetooth"
 
-MACHINEOVERRIDES =. "mx7:mx7ulp:"
 
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
@@ -38,3 +39,13 @@ UBOOT_CONFIG[mfgtool] = "mx7ulpea-ucom_config"
 UBOOT_MAKE_TARGET = "u-boot.imx"
 UBOOT_SUFFIX = "imx"
 
+#
+# Got the following build error: "make_dtb_boot_files No such file or directory"
+# Seemed to be related to imx-base.inc where make_dtb_boot_files is called from
+# IMAGE_BOOT_FILES. Setting IMAGE_BOOT_FILES like below solved the problem, but
+# it needs further investigation.
+#
+IMAGE_BOOT_FILES = " \
+    ${KERNEL_IMAGETYPE} \
+    ${KERNEL_DEVICETREE} \
+"
