Weston for wayland builds. Include OV5640 dts for 8mm

--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -23,6 +23,7 @@ KERNEL_DEVICETREE = "freescale/imx8mm-ea-ucom-kit_v2.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-1mw.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-m4.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-pcie.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v2-ov5640.dtb \
                      freescale/imx8mm-ea-ucom-ptp.dtb \
                      freescale/imx8mm-ea-ucom-ptp-1mw.dtb \
 "
