--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -43,7 +43,7 @@ SPL_BINARY = "spl/u-boot-spl.bin"
 DDR_FIRMWARE_NAME = "ddr4_imem_1d_201810.bin ddr4_dmem_1d_201810.bin ddr4_imem_2d_201810.bin ddr4_dmem_2d_201810.bin"
 
 # Set u-boot DTB
-UBOOT_DTB_NAME = "fsl-imx8mn-ea-ucom-kit_v2.dtb"
+UBOOT_DTB_NAME = "imx8mn-ea-ucom-kit_v2.dtb"
 
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_ddr4_evk"
