Updates for M.2 modules in preparation of Zigra release

--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -9,6 +9,8 @@ require conf/machine/include/tune-cortexa9.inc
 
 SERIAL_CONSOLES = "115200;ttymxc0"
 
+MACHINE_FEATURES += " pci wifi bluetooth nxp8987 mrvl8997"
+
 MACHINEOVERRIDES =. "mx6:mx6sx:"
 
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
