--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -9,7 +9,7 @@ include conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES = "115200;ttymxc0"
 
-MACHINE_FEATURES += " pci wifi bluetooth"
+MACHINE_FEATURES += " pci wifi bluetooth nxp8987 mrvl8997"
 
 MACHINEOVERRIDES =. "mx6:mx6ul:"
 
