--- a/conf/machine/imx8mqea-com.conf
+++ b/conf/machine/imx8mqea-com.conf
@@ -17,7 +17,7 @@ PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
-MACHINE_FEATURES += " pci"
+MACHINE_FEATURES += " pci nxp8987 mrvl8997"
 
 KERNEL_DEVICETREE = "freescale/imx8mq-ea-com-kit_v2.dtb \
                      freescale/imx8mq-ea-com-kit_v2-m4.dtb \
