--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -9,6 +9,8 @@ require conf/machine/include/tune-cortexa9.inc
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
+MACHINE_FEATURES += " pci wifi bluetooth nxp8987 mrvl8997"
+
 MACHINEOVERRIDES =. "mx6:mx6dl:"
 
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
