--- a/conf/machine/imx7ulpea-ucom.conf
+++ b/conf/machine/imx7ulpea-ucom.conf
@@ -11,7 +11,7 @@ require conf/machine/include/tune-cortexa7.inc
 
 SERIAL_CONSOLES = "115200;ttyLP0"
 
-MACHINE_FEATURES += " pci wifi bluetooth"
+MACHINE_FEATURES += " pci wifi bluetooth nxp8987 mrvl8997"
 
 
 PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
