Updated machine configs for wic support

--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -55,3 +55,14 @@ IMAGE_BOOT_FILES = " \
     ${KERNEL_IMAGETYPE} \
     ${KERNEL_DEVICETREE} \
 "
+
+# wic support
+IMAGE_BOOT_FILES_append = " \
+        boot.scr \
+"
+WKS_FILE_DEPENDS += " \
+        u-boot-script-ea \
+        e2fsprogs-native \
+        bmap-tools-native \
+"
+WKS_FILE = "imx-uboot-spl-bootpart.wks.in"
