--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -59,3 +59,13 @@ LOADADDR = ""
 UBOOT_SUFFIX = "bin"
 UBOOT_MAKE_TARGET = ""
 IMX_BOOT_SEEK = "33"
+
+# wic support
+IMAGE_BOOT_FILES_append = " \
+        boot.scr \
+"
+WKS_FILE_DEPENDS += " \
+        u-boot-script-ea \
+        e2fsprogs-native \
+        bmap-tools-native \
+"
