--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -52,3 +52,13 @@ IMAGE_BOOT_FILES = " \
     ${KERNEL_DEVICETREE} \
 "
 
+# wic support
+IMAGE_BOOT_FILES_append = " \
+        boot.scr \
+"
+WKS_FILE_DEPENDS += " \
+        u-boot-script-ea \
+        e2fsprogs-native \
+        bmap-tools-native \
+"
+WKS_FILE = "imx-uboot-spl-bootpart.wks.in"
