--- a/conf/machine/imx7ulpea-ucom.conf
+++ b/conf/machine/imx7ulpea-ucom.conf
@@ -49,3 +49,13 @@ IMAGE_BOOT_FILES = " \
     ${KERNEL_IMAGETYPE} \
     ${KERNEL_DEVICETREE} \
 "
+
+# wic support
+IMAGE_BOOT_FILES_append = " \
+        boot.scr \
+"
+WKS_FILE_DEPENDS += " \
+        u-boot-script-ea \
+        e2fsprogs-native \
+        bmap-tools-native \
+"
