--- a/conf/machine/imx6sxea-com.conf
+++ b/conf/machine/imx6sxea-com.conf
@@ -18,12 +18,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
-KERNEL_DEVICETREE = "imx6sxea-com-kit.dtb \
-  imx6sxea-com-kit-m4.dtb \
-  imx6sxea-com-kit-lvds.dtb \
-  imx6sxea-com-kit-rgb.dtb \
-  imx6sxea-com-kit-ov5640-pl.dtb \
-  imx6sxea-com-kit_v2.dtb \
+KERNEL_DEVICETREE = "imx6sxea-com-kit_v2.dtb \
   imx6sxea-com-kit_v2-m4.dtb \
   imx6sxea-com-kit_v2-ov5640-pl.dtb \
   imx6sxea-com-kit_v2-pcie.dtb \
