--- a/conf/machine/imx6ulea-com.conf
+++ b/conf/machine/imx6ulea-com.conf
@@ -18,10 +18,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
-KERNEL_DEVICETREE = "imx6ulea-com-kit.dtb \
-  imx6ulea-com-kit-rf.dtb \
-  imx6ulea-com-kit-ov5640-pl.dtb \
-  imx6ulea-com-kit_v2.dtb \
+KERNEL_DEVICETREE = "imx6ulea-com-kit_v2.dtb \
   imx6ulea-com-kit_v2-ov5640-pl.dtb \
   imx6ulea-com-ptp.dtb \
 "
