--- a/conf/machine/imx6dlea-com.conf
+++ b/conf/machine/imx6dlea-com.conf
@@ -18,10 +18,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
-KERNEL_DEVICETREE = "imx6dlea-com-kit.dtb \
-  imx6dlea-com-kit-ov5640.dtb \
-  imx6dlea-com-kit-ov5640-pl.dtb \
-  imx6dlea-com-kit_v2.dtb \
+KERNEL_DEVICETREE = "imx6dlea-com-kit_v2.dtb \
   imx6dlea-com-kit_v2-ov5640.dtb \
   imx6dlea-com-kit_v2-ov5640-pl.dtb \
   imx6dlea-com-kit_v2-pcie.dtb \
