--- a/conf/machine/imx7dea-com.conf
+++ b/conf/machine/imx7dea-com.conf
@@ -18,10 +18,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
-KERNEL_DEVICETREE = "imx7dea-com-kit.dtb \
-  imx7dea-com-kit-m4.dtb \
-  imx7dea-com-kit-ov5640.dtb \
-  imx7dea-com-kit_v2.dtb \
+KERNEL_DEVICETREE = "imx7dea-com-kit_v2.dtb \
   imx7dea-com-kit_v2-m4.dtb \
   imx7dea-com-kit_v2-ov5640.dtb \
   imx7dea-com-kit_v2-pcie.dtb \
