--- a/conf/machine/imx7dea-ucom.conf
+++ b/conf/machine/imx7dea-ucom.conf
@@ -19,11 +19,7 @@ PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
 
 PREFERRED_PROVIDER_linux-mfgtool = "linux-ea-mfgtool"
 
-KERNEL_DEVICETREE = "imx7dea-ucom-kit.dtb \
-  imx7dea-ucom-kit-m4.dtb \
-  imx7dea-ucom-kit-lvds.dtb \
-  imx7dea-ucom-kit-ov5640.dtb \
-  imx7dea-ucom-kit_v2.dtb \
+KERNEL_DEVICETREE = "imx7dea-ucom-kit_v2.dtb \
   imx7dea-ucom-kit_v2-m4.dtb \
   imx7dea-ucom-kit_v2-ov5640.dtb \
   imx7dea-ucom-kit_v2-pcie.dtb \
