Pre-release of 5.10.35. Not complete. Only tested to build for 8mm

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,7 +8,12 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "ea"
 BBFILE_PATTERN_ea = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ea = "9"
-LAYERSERIES_COMPAT_ea = "zeus"
+LAYERSERIES_COMPAT_ea = "hardknott"
 
 #LAYERDEPENDS_ea = "fsl-arm"
+
+IMX_DEFAULT_BOOTLOADER_imx = "u-boot-ea"
+
+# Avoid multiple runtime providers for u-boot-default-env
+PREFERRED_RPROVIDER_u-boot-default-env ??= "${IMX_DEFAULT_BOOTLOADER}"
 
