--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -24,6 +24,10 @@ KERNEL_DEVICETREE = "freescale/imx8mm-ea-ucom-kit_v2.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-m4.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-pcie.dtb \
                      freescale/imx8mm-ea-ucom-kit_v2-ov5640.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v3.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v3-m4.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v3-pcie.dtb \
+                     freescale/imx8mm-ea-ucom-kit_v3-ov5640.dtb \
                      freescale/imx8mm-ea-ucom-ptp.dtb \
                      freescale/imx8mm-ea-ucom-ptp-1mw.dtb \
 "
