--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -24,6 +24,9 @@ KERNEL_DEVICETREE = "freescale/imx8mn-ea-ucom-kit_v2.dtb \
                      freescale/imx8mn-ea-ucom-kit_v2-m4.dtb \
                      freescale/imx8mn-ea-ucom-kit_v2-usb-host.dtb \
                      freescale/imx8mn-ea-ucom-kit_v2-ov5640.dtb \
+                     freescale/imx8mn-ea-ucom-kit_v3.dtb \
+                     freescale/imx8mn-ea-ucom-kit_v3-m4.dtb \
+                     freescale/imx8mn-ea-ucom-kit_v3-ov5640.dtb \
                      freescale/imx8mn-ea-ucom-ptp.dtb \
                      freescale/imx8mn-ea-ucom-ptp-1mw.dtb \
 "
