--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -42,6 +42,8 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx8mmea-ucom_config,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
+ATF_PLATFORM = "imx8mm"
+
 # Set DDR FIRMWARE
 DDR_FIRMWARE_NAME = "lpddr4_pmu_train_1d_imem.bin lpddr4_pmu_train_1d_dmem.bin lpddr4_pmu_train_2d_imem.bin lpddr4_pmu_train_2d_dmem.bin"
 
@@ -50,6 +52,8 @@ UBOOT_DTB_NAME = "imx8mm-ea-ucom-kit_v2.dtb"
 
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_evk"
+
+IMX_BOOT_SOC_TARGET = "iMX8MM"
 
 # Set Serial console
 SERIAL_CONSOLES = "115200;ttymxc1"
