--- a/conf/machine/imx8mnea-ucom.conf
+++ b/conf/machine/imx8mnea-ucom.conf
@@ -42,6 +42,8 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx8mnea-ucom_config,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
+ATF_PLATFORM = "imx8mn"
+
 # Set DDR FIRMWARE
 DDR_FIRMWARE_NAME = "ddr4_imem_1d_201810.bin ddr4_dmem_1d_201810.bin ddr4_imem_2d_201810.bin ddr4_dmem_2d_201810.bin"
 
@@ -50,6 +52,8 @@ UBOOT_DTB_NAME = "imx8mn-ea-ucom-kit_v2.dtb"
 
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_ddr4_evk"
+
+IMX_BOOT_SOC_TARGET = "iMX8MN"
 
 # Set Serial console
 SERIAL_CONSOLES = "115200;ttymxc1"
