--- a/conf/machine/imx8mqea-com.conf
+++ b/conf/machine/imx8mqea-com.conf
@@ -34,6 +34,8 @@ UBOOT_CONFIG ??= "sd"
 UBOOT_CONFIG[sd] = "mx8mqea-com_config,sdcard"
 SPL_BINARY = "spl/u-boot-spl.bin"
 
+ATF_PLATFORM = "imx8mq"
+
 # Set DDR FIRMWARE
 DDR_FIRMWARE_NAME = "lpddr4_pmu_train_1d_imem.bin lpddr4_pmu_train_1d_dmem.bin lpddr4_pmu_train_2d_imem.bin lpddr4_pmu_train_2d_dmem.bin"
 
@@ -42,6 +44,8 @@ UBOOT_DTB_NAME = "imx8mq-ea-com-kit_v2.dtb"
 
 # Set imx-mkimage boot target
 IMXBOOT_TARGETS = "flash_evk flash_evk_no_hdmi flash_dp_evk"
+
+IMX_BOOT_SOC_TARGET = "iMX8MQ"
 
 # Set Serial console
 SERIAL_CONSOLES = "115200;ttymxc0"
