Updated linux-ea. Fixed Host AP for M.2 modules with NXP chipsets

--- a/recipes-ea/ea-files/ea-files/hostapd@uap0.service
+++ b/recipes-ea/ea-files/ea-files/hostapd@uap0.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Hostapd for %i
-Requires=sys-subsystem-net-devices-%i.device
-After=sys-subsystem-net-devices-%i.device
+Requires=sys-subsystem-net-devices-mlan0.device
+After=sys-subsystem-net-devices-mlan0.device
 Before=network.target
 Wants=network.target
 
