Changes to make it recipes compatible with changes in 5.15.32 / Kirkstone

--- a/conf/machine/imx8mmea-ucom.conf
+++ b/conf/machine/imx8mmea-ucom.conf
@@ -9,11 +9,12 @@ MACHINEOVERRIDES =. "mx8:mx8m:mx8mm:"
 require conf/machine/include/imx-base.inc
 require conf/machine/include/arm/armv8a/tune-cortexa53.inc
 
-PREFERRED_PROVIDER_virtual/kernel:imx = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel:imx-nxp-bsp = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_RPROVIDER_kernel-module-imx-gpu-viv = "linux-ea"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader:imx = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader:imx-nxp-bsp = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
