iMX8MQ: Added support for this target

--- a/conf/machine/imx8mqea-com.conf
+++ b/conf/machine/imx8mqea-com.conf
@@ -7,13 +7,14 @@
 MACHINEOVERRIDES =. "mx8:mx8m:mx8mq:"
 
 require conf/machine/include/imx-base.inc
-require conf/machine/include/tune-cortexa53.inc
+require conf/machine/include/arm/armv8a/tune-cortexa53.inc
 
-PREFERRED_PROVIDER_virtual/kernel_imx = "linux-ea"
+PREFERRED_PROVIDER_virtual/kernel:imx-nxp-bsp = "linux-ea"
 PREFERRED_PROVIDER_virtual/kernel = "linux-ea"
+PREFERRED_RPROVIDER_kernel-module-imx-gpu-viv = "linux-ea"
 
 PREFERRED_PROVIDER_u-boot = "u-boot-ea"
-PREFERRED_PROVIDER_virtual/bootloader_imx = "u-boot-ea"
+PREFERRED_PROVIDER_virtual/bootloader:imx-nxp-bsp = "u-boot-ea"
 PREFERRED_PROVIDER_u-boot-mfgtool = "u-boot-ea-mfgtool"
 PREFERRED_PROVIDER_u-boot-fw-utils = "u-boot-ea-fw-utils"
 
@@ -60,7 +61,7 @@ UBOOT_MAKE_TARGET = ""
 IMX_BOOT_SEEK = "33"
 
 # wic support
-IMAGE_BOOT_FILES_append = " \
+IMAGE_BOOT_FILES:append = " \
         boot.scr \
 "
 WKS_FILE_DEPENDS += " \
